# qtwrapper

./: .clang-format  CMakeLists.txt  QtWrapper  README.md
common/: CMakeLists.txt  utf8.h
imageprovider/: imageprovider.cpp  imageprovider.h
imageprovider/test/: CallManager.h  imageprovider.pro  images.qrc  main.cpp  main.qml
logger/: QLogger.cpp  QLogger.hpp
mutexsafe/: MutexSafe.h  mutexsafe.h
qml/: CanvasMask.qml  OpacityMask.qml
qml/shader/: opacitymask.frag
worker/: QWorker.cpp  QWorker.h
